--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ ul li a:hover{
 #footer{
     margin-top: 10px;
     clear: both;
-    background: url(images/footer.png) no-repeat;
     background-size: cover;
 }
 .classPadding{
@@ -174,7 +173,9 @@ padding: 5px;
   padding: 10px 0;
   height: 150px;
 }
-
+.img{
+    
+}
 .modal-content, #caption {
   animation-name: zoom;
   animation-duration: 0.6s;
